--- a/src/components/view-sites/css.styl
+++ b/src/components/view-sites/css.styl
@@ -1,1 +1,15 @@
-// todo
+main
+  display flex
+  flex-flow column
+  gap 1rem
+  & > div
+    display flex
+    flex-flow column
+    gap 1rem
+  & > footer
+    border-top 1px solid var(--accent)
+    padding 1rem
+    & > nav
+      flex-basis 100%
+      justify-content end
+  
