--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -22,6 +22,19 @@ main
   padding 1rem
   width 100%
 
+  nav
+    display flex
+    gap 0.5rem
+    margin-block-end 1rem
+
+    button
+      font-size var(--small-copy-font-size)
+      background var(--background)
+      color var(--highlight)
+      min-width 6rem
+
+
+
 [slot="content"]
   margin-inline-start 1rem
 
