--- a/src/components/gadget/add/css.styl
+++ b/src/components/gadget/add/css.styl
@@ -1,1 +1,20 @@
-// todo
+main
+  font-size var(--small-copy-font-size)
+
+header
+  margin-bottom 2rem
+
+.options
+  display flex
+  flex-wrap wrap
+  gap 2rem
+
+  .option
+    display flex
+    flex-flow column
+    align-items center
+    color var(--highlight)
+    cursor default
+
+  i
+    font-size 2rem
