--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -1,4 +1,5 @@
 :host
+  overflow auto
   display flex
   flex-flow column
   flex 1 1 auto
@@ -13,6 +14,7 @@ header
   margin-bottom 1rem
 
 main
+  overflow auto
   flex 1 1 auto
   border 1px solid var(--accent)
   border-radius 0.25rem
@@ -43,6 +45,7 @@ main
 
 [slot="editor"]
   padding 1rem
+  overflow scroll
 
 .node
   padding 2px
