--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -35,39 +35,55 @@ main
       color var(--highlight)
       min-width 6rem
 
+  .node
+
+    & > :first-child
+      padding 2px
+      border-radius 2px
+
+    &.selected 
+      & > :first-child
+        background unquote("color-mix(in lch, var(--background), var(--highlight) 50%)")
+
+      input
+        &:focus
+          cursor text
+          background var(--background)
+
+    input, span
+      font-size var(--small-copy-font-size)
+      background transparent
+      border none
+      outline none
+      min-width 0
+      border-radius 0.5rem
+      cursor pointer
+      white-space nowrap
+      overflow hidden
+      text-overflow ellipsis
 
 
-[slot="content"]
-  margin-inline-start 1rem
+    & > div
+      margin-inline-start 1.25rem
 
-  & > div
-    margin-inline-start 1rem
+  details
+    & > summary
+      &::marker
+        font-family remixicon
+        // arrow-right-s-fill
+        content "\EA6D"
+    
+      & > label
+        margin-inline-start 0.5rem
+
+    &[open]
+      & > summary::marker
+        // arrow-down-s-fill
+        content "\EA4D"
 
 [slot="editor"]
   padding 1rem
   overflow scroll
 
-.node
-  padding 2px
-  border-radius 2px
 
-  &.selected
-    background unquote("color-mix(in lch, var(--background), var(--highlight) 50%)")
-
-    input
-      &:focus
-        cursor text
-        background var(--background)
-
-  input, span
-    font-size var(--small-copy-font-size)
-    background transparent
-    border none
-    outline none
-    min-width 0
-    border-radius 0.5rem
-    cursor pointer
-    white-space nowrap
-    overflow hidden
-    text-overflow ellipsis
     
