--- a/src/components/layout/edit/css.styl
+++ b/src/components/layout/edit/css.styl
@@ -2,3 +2,6 @@ form
   --copy-font-size var(--small-copy-font-size)
   --copy-line-height var(--small-copy-line-height)
 
+  label
+    span
+      text-transform capitalize
