--- a/src/components/gadgets/icon/edit/css.styl
+++ b/src/components/gadgets/icon/edit/css.styl
@@ -1,3 +1,30 @@
 form
   --copy-font-size var(--small-copy-font-size)
   --copy-line-height var(--small-copy-line-height)
+  --suggestion-margin 0.5rem
+
+div:has(> ul.suggestions)
+  position relative
+  max-inline-size fit-content
+
+ul.suggestions
+  margin 0
+  margin-block-start 0.25rem
+  padding 0.5rem
+  position absolute
+  border-radius 0.5rem
+  border 1px solid var(--accent)
+  background var(--background)
+  width 100%
+  max-height s("calc(((var(--copy-line-height) + var(--suggestion-margin)) * 5) + 1rem)")
+  overflow scroll
+
+ul.suggestions > li
+  list-style none
+  margin unset
+  padding unset
+  margin-block-start var(--suggestion-margin)
+
+li.selected
+  color var(--background)
+  background var(--highlight)
