icon autocomplete working but needs refactoring

--- a/src/components/gadgets/icon/edit/css.styl
+++ b/src/components/gadgets/icon/edit/css.styl
@@ -28,3 +28,10 @@ ul.suggestions > li
 li.selected
   color var(--background)
   background var(--highlight)
+
+input + i
+  margin-inline-start 1rem
+  padding 0.5rem
+  border 1px solid var(--highlight)
+  border-radius 0.5rem
+  font-size var(--largest-copy-font-size)
