--- a/src/components/image/select/css.styl
+++ b/src/components/image/select/css.styl
@@ -1,6 +1,21 @@
 form
   gap 0.5rem
 
+  & > nav
+    margin-block-end 1rem
+    display flex
+    flex-flow row
+    justify-content space-between
+    
+    // & > button
+    //   padding 0.5rem
+    //   border 1px solid var(--highlight)
+    //   border-radius 0.5rem
+
+    //   &:disabled
+    //     opacity 0.25
+
+
 .step 
   flex-flow column
   gap 0.5rem
@@ -11,9 +26,43 @@ form
     gap 0.5rem
 
     &:not(:first-child)
-      margin-block-start 0.5rem
-      border-block-start 1px solid var(--accent)
-      padding-block-start 0.5rem
       flex-flow row
       justify-content end
 
+
+  &[data-state="uploading"]
+    & > label
+      display flex
+      flex-flow column
+      gap 0.5rem
+
+      & > progress
+        height 2rem
+        width 100%
+        -webkit-appearance none
+        -moz-appearance none
+        appearance none
+        border 1px solid var(--highlight)
+        border-radius 0.5rem
+        background var(--background)
+
+        &::-moz-progress-bar
+          border-radius 0.5rem
+          background var(--highlight)
+
+        &::-webkit-progress-bar
+          // height 2rem
+          // width 100%
+          border-radius 0.5rem
+          background var(--background)
+
+        &::-webkit-progress-value
+          border-radius 0.5rem
+          background var(--highlight)
+
+
+
+button[name="browse-files"]
+  width 100%
+input[type="file"]
+  display none
