--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -28,10 +28,10 @@ input, span
   overflow hidden
   text-overflow ellipsis
 
-header
+main > header
   margin-bottom 1rem
 
-main
+main > div
   overflow auto
   flex 1 1 auto
   border 1px solid var(--accent)
