--- a/src/components/image/select/css.styl
+++ b/src/components/image/select/css.styl
@@ -80,3 +80,6 @@ vellum-autocomplete[name="term"]
       color var(--foreground)
       --copy-font-size var(--smaller-copy-font-size)
       --copy-line-height var(--smaller-copy-line-height)
+
+  &::part(options)
+    max-block-size 32rem
