--- a/src/components/gadgets/link/edit/css.styl
+++ b/src/components/gadgets/link/edit/css.styl
@@ -1,3 +1,8 @@
 form
   --copy-font-size var(--small-copy-font-size)
   --copy-line-height var(--small-copy-line-height)
+
+nav
+  display flex
+  flex-flow column
+  gap 0.5rem
