--- a/src/components/site/preview/css.styl
+++ b/src/components/site/preview/css.styl
@@ -1,1 +1,11 @@
-// todo
+main
+  display flex
+  flex-direction column
+  height 100%
+  width 100%
+  overflow scroll
+
+iframe
+  width 100%
+  flex-grow 1
+  border none
