--- a/src/components/site/preview/css.styl
+++ b/src/components/site/preview/css.styl
@@ -1,11 +1,8 @@
-main
-  display flex
-  flex-direction column
+.body
   height 100%
   width 100%
   overflow scroll
+  
+  *
+    transition all 0.5s
 
-iframe
-  width 100%
-  flex-grow 1
-  border none
