--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -76,11 +76,14 @@ main
     input, span
       font-size var(--small-copy-font-size)
 
-    .zone
+    .zone[data-at]
       height 2px
       &.targeted
         border-block-start 1px solid var(--accent)
 
+    .zone[data-parent].targeted
+      background unquote("color-mix(in lch, var(--background), var(--highlight) 75%)")
+      
     &:has(> details > summary > .source)
       .zone
         display none
