--- a/src/components/gadgets/image/edit/css.styl
+++ b/src/components/gadgets/image/edit/css.styl
@@ -15,5 +15,6 @@ form
 
   & > img
     // default image is typically for light mode
-    background white
+    // TODO but depends on the color scheme?
+    // background white
     max-inline-size 100%
