--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -121,8 +121,10 @@ main
 
 [slot="editor"]
   padding 1rem
-  height 100%
-  overflow scroll
+  height s("calc(100% - 2rem)")
+  width s("calc(100% - 2rem)")
+  overflow-y scroll
+
 
 [slot="preview"]
   height 100%
