--- a/src/components/gadgets/icon/edit/css.styl
+++ b/src/components/gadgets/icon/edit/css.styl
@@ -8,6 +8,9 @@ div.icon.field
     flex-flow column
     gap 1rem
 
+div:has([name="term"])
+  grid-column span 2
+
 .preview
   width fit-content
   padding 0.25rem
