--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -29,6 +29,15 @@ main
   flex-flow column
   height 100%
 
+  --first-level-heading-font-size var(--default-heading-font-size)
+  --first-level-heading-line-height var(--default-heading-line-height)
+
+  --second-level-heading-font-size var(--small-heading-font-size)
+  --second-level-heading-line-height var(--small-heading-line-height)
+
+  --third-level-heading-font-size var(--smaller-heading-font-size)
+  --third-level-heading-line-height var(--smaller-heading-line-height)
+
   & > header
     margin-bottom 1rem
 
