working header part scale + container q

--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -29,14 +29,17 @@ main
   flex-flow column
   height 100%
 
-  --first-level-heading-font-size var(--default-heading-font-size)
-  --first-level-heading-line-height var(--default-heading-line-height)
+  // --first-level-heading-font-size var(--default-heading-font-size)
+  // --first-level-heading-line-height var(--default-heading-line-height)
 
-  --second-level-heading-font-size var(--small-heading-font-size)
-  --second-level-heading-line-height var(--small-heading-line-height)
+  // --second-level-heading-font-size var(--small-heading-font-size)
+  // --second-level-heading-line-height var(--small-heading-line-height)
 
-  --third-level-heading-font-size var(--smaller-heading-font-size)
-  --third-level-heading-line-height var(--smaller-heading-line-height)
+  // --third-level-heading-font-size var(--smaller-heading-font-size)
+  // --third-level-heading-line-height var(--smaller-heading-line-height)
+
+  // --fourth-level-heading-font-size var(--smallest-heading-font-size)
+  // --fourth-level-heading-line-height var(--smallest-heading-line-height)
 
   & > header
     margin-bottom 1rem
