--- a/src/components/gadget/edit/css.styl
+++ b/src/components/gadget/edit/css.styl
@@ -20,3 +20,20 @@ form
         font-size 4rem
         line-height 4rem
 
+.image.field
+  .image
+    display flex
+    flex-direction column
+    gap 0.75rem
+
+    .thumbnail 
+      border 1px solid var(--accent)
+      border-radius 0.5rem
+      padding 0.5rem
+      width fit-content
+
+      & > img
+        // default image is typically for light mode
+        // TODO but depends on the color scheme?
+        // background white
+        max-inline-size 100%
