--- a/src/components/gadget/edit/css.styl
+++ b/src/components/gadget/edit/css.styl
@@ -37,3 +37,9 @@ form
         // TODO but depends on the color scheme?
         // background white
         max-inline-size 100%
+
+.page.field
+  label > div
+    display flex
+    flex-direction column
+    gap 0.75rem
