--- a/src/components/gadget/edit/editor/css.styl
+++ b/src/components/gadget/edit/editor/css.styl
@@ -64,10 +64,11 @@ vellum-field
     datalist
       // order 2
       // flex 1 1 auto
-      display flex
-      justify-content space-between
+      // display flex
+      // justify-content space-between
 
       option
         display none
         &:first-child, &:last-child
           display inline
+          font-size var(--smallest-copy-font-size)
