--- a/src/components/gadget/add/css.styl
+++ b/src/components/gadget/add/css.styl
@@ -2,7 +2,9 @@ main
   font-size var(--small-copy-font-size)
 
 header
-  margin-bottom 2rem
+  margin-block-end 1rem
+  &:not(:first-child)
+    margin-block-start 2rem
 
 .options
   display flex
