--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -87,6 +87,10 @@ main
 
     input, span
       font-size var(--small-copy-font-size)
+    
+    .mixin
+      span
+        font-style italic
 
     & > :has(label)
       .zone
@@ -141,5 +145,3 @@ main
 [slot="preview"]
   height 100%
   overflow scroll
-
-    
