--- a/src/components/connect/css.styl
+++ b/src/components/connect/css.styl
@@ -1,1 +1,6 @@
-// todo
+:host
+  display block
+  // TODO why do we need this?
+  //      children should have intrinsic size
+  //      but they don't for some reason
+  min-inline-size 16rem
