--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -1,8 +1,9 @@
 :host
+  inline-size 100%
+  block-size 100%
   overflow auto
   display flex
   flex-flow column
-  flex 1 1 auto
   --gutter-color var(--accent)
   --gutter-width 1px
 
