--- a/src/components/sites/view/css.styl
+++ b/src/components/sites/view/css.styl
@@ -1,15 +1,16 @@
+:host
+  display flex
+  flex-flow column
+  gap 2rem
+
 main
   display flex
   flex-flow column
   gap 1rem
-  & > div
-    display flex
-    flex-flow column
-    gap 1rem
-  & > footer
-    border-top 1px solid var(--accent)
-    padding 1rem
-    & > nav
-      flex-basis 100%
-      justify-content end
-  
+
+footer
+  border-top 1px solid var(--accent)
+  padding 1rem
+  & > nav
+    flex-basis 100%
+    justify-content end
