--- a/src/components/site/edit/css.styl
+++ b/src/components/site/edit/css.styl
@@ -61,6 +61,10 @@ main
     gap 0.5rem
     margin-block-end 1rem
 
+  // root node of tree
+  nav + .node
+    overflow auto
+
   .node
 
     // & > :has(label) is the selectable part of the node
