fixes dashkite/sansa#25

--- a/src/components/gadget/edit/editor/css.styl
+++ b/src/components/gadget/edit/editor/css.styl
@@ -24,7 +24,7 @@ vellum-field
         & > img
           max-inline-size 100%
 
-  &[name="icon"]
+  &[name="brief.icon"]
     grid-column 1 / -1
 
     [slot="input"]
@@ -39,7 +39,7 @@ vellum-field
         &::empty
           border 1px solid var(--warn)
 
-        & > i
+        i
           font-size 4rem
           line-height 4rem
 
